--- a/chrismastree.html
+++ b/chrismastree.html
@@ -84,7 +84,7 @@
     <div id="loading">正在挂起星星...<br><span style="font-size:12px; opacity:0.6">请允许摄像头访问</span></div>
     
     <div id="greeting-container">
-        <div class="greeting-text">含含圣诞快乐</div>
+        <div class="greeting-text">圣诞快乐</div>
         <div class="sub-text">Merry Christmas</div>
     </div>
 
@@ -498,4 +498,5 @@
         });
     </script>
 </body>
+
 </html>
